force-app/main/default/objects/Descuento_Cliente__c/Descuento_Cliente__c.object-meta.xml
<CustomObject>
    <label>Descuento Cliente</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nro Reg</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Descuentos Cliente</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>