force-app/main/default/objects/Descuento_Cliente__c/fields/Cant_es__c.field-meta.xml
<CustomField>
    <fullName>Cant_es__c</fullName>
    <label>Cantidad estimada</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>