force-app/main/default/objects/Descuento_Cliente__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Descuentos Cliente</relationshipLabel>
    <relationshipName>Descuentos_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>