force-app/main/default/objects/Descuento_Cliente__c/fields/Codigo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_cliente__c</fullName>
    <label>Codigo de cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>