force-app/main/default/objects/Descuento_Cliente__c/fields/Codigo_de_Id_externo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Id_externo__c</fullName>
    <externalId>true</externalId>
    <label>Codigo de Id externo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>