force-app/main/default/objects/Descuento_Cliente__c/fields/CostoId__c.field-meta.xml
<CustomField>
    <fullName>CostoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CostoId</label>
    <referenceTo>Costo__c</referenceTo>
    <relationshipLabel>Descuentos Cliente</relationshipLabel>
    <relationshipName>Descuentos_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>