force-app/main/default/objects/Descuento_Cliente__c/fields/Cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Cotizaci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotización</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Descuentos Cliente</relationshipLabel>
    <relationshipName>Descuentos_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>