force-app/main/default/objects/Descuento_Cliente__c/fields/Desc_Aut_nomo__c.field-meta.xml
<CustomField>
    <fullName>Desc_Aut_nomo__c</fullName>
    <label>Desc.Autónomo</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>