force-app/main/default/objects/Descuento_Cliente__c/fields/Desc_Mediocampo__c.field-meta.xml
<CustomField>
    <fullName>Desc_Mediocampo__c</fullName>
    <label>Desc.Mediocampo</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>