force-app/main/default/objects/Descuento_Cliente__c/fields/Descuento_gestionado__c.field-meta.xml
<CustomField>
    <fullName>Descuento_gestionado__c</fullName>
    <label>Descuento gestionado</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>