force-app/main/default/objects/Descuento_Cliente__c/fields/Error_Margen__c.field-meta.xml
<CustomField>
    <fullName>Error_Margen__c</fullName>
    <description>Para traer el error del calculo de % de Margen del Producto porque no tiene costo.</description>
    <label>Error % Margen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>