force-app/main/default/objects/Descuento_Cliente__c/fields/Error_Precio__c.field-meta.xml
<CustomField>
    <fullName>Error_Precio__c</fullName>
    <description>Almacena mensaje de error para productos que no tienen Precio</description>
    <label>Error Precio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>