force-app/main/default/objects/Descuento_Cliente__c/fields/Es_recargo__c.field-meta.xml
<CustomField>
    <fullName>Es_recargo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es recargo</label>
    <type>Checkbox</type>
</CustomField>