force-app/main/default/objects/Descuento_Cliente__c/fields/FechaHora_Subgerente__c.field-meta.xml
<CustomField>
    <fullName>FechaHora_Subgerente__c</fullName>
    <label>FechaHora Subgerente</label>
    <type>DateTime</type>
</CustomField>