force-app/main/default/objects/Descuento_Cliente__c/fields/Historico__c.field-meta.xml
<CustomField>
    <fullName>Historico__c</fullName>
    <formula>Fecha_hasta__c &lt;= TODAY()</formula>
    <label>Historico</label>
    <type>Checkbox</type>
</CustomField>