force-app/main/default/objects/Descuento_Cliente__c/fields/Margen_de_Contribucion_por_Kilo__c.field-meta.xml
<CustomField>
    <fullName>Margen_de_Contribucion_por_Kilo__c</fullName>
    <description>Permite ver el calculo del Margen de Contribución por Kilo en la maestra</description>
    <label>Contribución por Kilo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>