force-app/main/default/objects/Descuento_Cliente__c/fields/Margen_Producto__c.field-meta.xml
<CustomField>
    <fullName>Margen_Producto__c</fullName>
    <label>Margen Producto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>