force-app/main/default/objects/Descuento_Cliente__c/fields/Nombre_Mediocampo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Mediocampo__c</fullName>
    <label>Nombre Mediocampo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>