force-app/main/default/objects/Descuento_Cliente__c/fields/Nro_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Nro_Cotizacion__c</fullName>
    <formula>Cotizaci_n__r.QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nro Cotizacion</label>
    <type>Text</type>
</CustomField>