force-app/main/default/objects/Descuento_Cliente__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Descuentos Cliente</relationshipLabel>
    <relationshipName>Descuentos_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>