force-app/main/default/objects/Descuento_Cliente__c/fields/Porcentaje_de_Rappel__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_Rappel__c</fullName>
    <description>Permite consultar el Rappel del cliente para verlo en la maestra de precios en descuentos</description>
    <label>Porcentaje de Rappel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>