force-app/main/default/objects/Descuento_Cliente__c/fields/Precio_con_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Precio_con_Descuento__c</fullName>
    <label>Precio con Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>