force-app/main/default/objects/Descuento_Cliente__c/fields/PrecioId__c.field-meta.xml
<CustomField>
    <fullName>PrecioId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PrecioID</label>
    <referenceTo>Precios__c</referenceTo>
    <relationshipLabel>Descuentos Cliente</relationshipLabel>
    <relationshipName>Descuentos_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>