force-app/main/default/objects/Descuento_Cliente__c/fields/Relacion_Rappel_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Relacion_Rappel_Descuento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Permite consultar el rappel del cliente para poder verlo en la maestra para los descuentos</description>
    <label>Relacion Rappel Descuento</label>
    <referenceTo>Rappel__c</referenceTo>
    <relationshipLabel>Descuentos Cliente</relationshipLabel>
    <relationshipName>Descuentos_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>