force-app/main/default/objects/Descuento_Cliente__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <formula>Producto__r.Codigo__c</formula>
    <label>SKU</label>
    <type>Text</type>
</CustomField>