force-app/main/default/objects/Descuento_Cliente__c/fields/Solicitado_por__c.field-meta.xml
<CustomField>
    <fullName>Solicitado_por__c</fullName>
    <label>Solicitado por</label>
    <length>50</length>
    <type>Text</type>
</CustomField>