force-app/main/default/objects/Descuento_Cliente__c/fields/TextoSKU__c.field-meta.xml
<CustomField>
    <fullName>TextoSKU__c</fullName>
    <label>TextoSKU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>