force-app/main/default/objects/Descuento_Cliente__c/fields/Tiene_Costo__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Costo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Para checkear si el producto tiene costo en la maestra y mostrar error si no tiene costo.</description>
    <label>Tiene Costo</label>
    <type>Checkbox</type>
</CustomField>