force-app/main/default/objects/Descuento_Cliente__c/fields/UMV__c.field-meta.xml
<CustomField>
    <fullName>UMV__c</fullName>
    <formula>Producto__r.UMV__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UMV</label>
    <type>Text</type>
</CustomField>