force-app/main/default/objects/Descuento_Cliente__c/fields/Valor_Neto__c.field-meta.xml
<CustomField>
    <fullName>Valor_Neto__c</fullName>
    <label>Valor Neto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>